Fix content picking alignment

--- a/src/scss/06-blocks/_gutenberg.scss
+++ b/src/scss/06-blocks/_gutenberg.scss
@@ -58,23 +58,6 @@
         margin-left: auto;
     }
 
-    @include editor-only {
-        > .wp-block[class*="wp-block-beapi-manual-block"],
-        > .wp-block[class*="wp-block-beapi-dynamic-block"] {
-            width: 100%;
-            max-width: none;
-        }
-
-        // The template block must have a ".block" class. Example : <div class="block block--my-custom-block">
-        > :where(.wp-block[class*="wp-block-beapi-manual-block"]) :where(.block),
-        > :where(.wp-block[class*="wp-block-beapi-dynamic-block"]) :where(.block) {
-            width: $container-default;
-            max-width: var(--responsive--aligndefault-width);
-            margin-right: auto;
-            margin-left: auto;
-        }
-    }
-
     #{context-selector(".alignwide", "[data-align='wide']")} {
         width: #{$container-wide};
         max-width: var(--responsive--alignwide-width);
